--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <!-- Link to Bootstrap 4 CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
@@ -48,6 +50,27 @@
             </div>
         </div>
 
+        <!-- main content area -->
+        <div class="row no-gutters" id="about">
+            
+        </div>
+
+        <!-- footer: Alyssa -->
+        <div class="row no-gutters" id="footer">
+            <div class="col-sm-12">
+                <h1>Contact us!</h1>
+                <div class="row no-gutters" id="nested">
+                    <div class="col-sm-12 col-md-2" id="col-1">
+                        <p><i class="fab fa-instagram"></i>Instagram placeholder</p>
+                        <p><i class="fab fa-etsy"></i>Etsy placeholder</p>
+                    </div>
+                    <div class="col-sm-12 col-md-2" id="col-2">
+                        <p><i class="fab fa-facebook"></i>Facebook placeholder</p>
+                        <p><i class="fas fa-envelope"></i>florencecooley@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- jQuery -->
