--- a/about.html
+++ b/about.html
@@ -61,12 +61,12 @@
                 <h1>Contact us!</h1>
                 <div class="row no-gutters" id="nested">
                     <div class="col-sm-12 col-md-2" id="col-1">
-                        <p><i class="fab fa-instagram"></i>Instagram placeholder</p>
-                        <p><i class="fab fa-etsy"></i>Etsy placeholder</p>
+                        <p><a href="#" class="contact-link"><i class="fab fa-instagram"></i>Instagram placeholder</a></p>
+                        <p><a href="#" class="contact-link"><i class="fab fa-etsy"></i>Etsy placeholder</a></p>
                     </div>
                     <div class="col-sm-12 col-md-2" id="col-2">
-                        <p><i class="fab fa-facebook"></i>Facebook placeholder</p>
-                        <p><i class="fas fa-envelope"></i>florencecooley@gmail.com</p>
+                        <p><a href="#" class="contact-link"><i class="fab fa-facebook"></i>Facebook placeholder</a></p>
+                        <p><a href="mailto: florencecooley@gmail.com" class="contact-link"><i class="fas fa-envelope"></i>florencecooley@gmail.com</a></p>
                     </div>
                 </div>
             </div>
