chenged about section

--- a/about.html
+++ b/about.html
@@ -80,22 +80,25 @@
                           <span class="sr-only">Next</span>
                         </a>
                       </div>
-                <div class="bio-card-line">
-                    <h5>Name: </h5>
-                    <p>HER NAME!</p>
-                </div>
-                <div class="bio-card-line">
-                    <h5>Location: </h5>
-                    <p>HER LOCATION!</p>
-                </div>
-                <div class="bio-card-line">
-                    <h5>Interests: </h5>
-                    <p>HER INTERESTS!</p>
-                </div>
-                <div class="bio-card-line">
-                    <h5>Motto: </h5>
-                    <p>HER MOTTO!</p>
-                </div>
+                      <div class="bio-card-info">
+                        <div class="bio-card-line">
+                            <h5 class="bio-card-label">Name: </h5>
+                            <p>HER NAME!</p>
+                        </div>
+                        <div class="bio-card-line">
+                            <h5 class="bio-card-label">Location: </h5>
+                            <p>HER LOCATION!</p>
+                        </div>
+                        <div class="bio-card-line">
+                            <h5 class="bio-card-label">Interests: </h5>
+                            <p>HER INTERESTS!</p>
+                        </div>
+                        <div class="bio-card-line">
+                            <h5 class="bio-card-label">Motto: </h5>
+                            <p>HER MOTTO!</p>
+                        </div>
+                      </div>
+               
             </div>
             <div class="col-8 bio-description">
                 <div>
@@ -109,7 +112,7 @@
                       <div class="card-header" id="headingOne">
                         <h5 class="mb-0">
                           <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            <i class="fas fa-angle-down arrow-icon"></i> Why I started Flo Designs
+                            <i class="fas fa-angle-down arrow-icon"> Why I started Flo Designs</i> 
                           </button>
                         </h5>
                       </div>
@@ -124,7 +127,7 @@
                       <div class="card-header" id="headingTwo">
                         <h5 class="mb-0">
                           <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            <i class="fas fa-angle-down arrow-icon"></i> More about the materials
+                            <i class="fas fa-angle-down arrow-icon"> More about the materials</i>
                           </button>
                         </h5>
                       </div>
@@ -138,7 +141,7 @@
                       <div class="card-header" id="headingThree">
                         <h5 class="mb-0">
                           <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <i class="fas fa-angle-down arrow-icon"></i> Design process
+                            <i class="fas fa-angle-down arrow-icon"> Design process</i> 
                           </button>
                         </h5>
                       </div>
