Fixed footer in about

--- a/index.html
+++ b/index.html
@@ -106,13 +106,15 @@
             <div class="col-sm-12">
                 <h1>Contact us!</h1>
                 <div class="row no-gutters" id="nested">
-                    <div class="col-sm-12 col-md-2" id="col-1">
-                        <p><a href="#" class="contact-link"><i class="fab fa-instagram"></i>Instagram placeholder</a></p>
+                    <div class="col-sm-12 col-md-2 footer-col">
+                        <p><a href="#" class="contact-link"><i class="fab fa-instagram"></i>Instagram placeholder</a>
+                        </p>
                         <p><a href="#" class="contact-link"><i class="fab fa-etsy"></i>Etsy placeholder</a></p>
                     </div>
-                    <div class="col-sm-12 col-md-2" id="col-2">
+                    <div class="col-sm-12 col-md-2 footer-col">
                         <p><a href="#" class="contact-link"><i class="fab fa-facebook"></i>Facebook placeholder</a></p>
-                        <p><a href="mailto: florencecooley@gmail.com" class="contact-link"><i class="fas fa-envelope"></i>florencecooley@gmail.com</a></p>
+                        <p><a href="mailto: florencecooley@gmail.com" class="contact-link"><i
+                                    class="fas fa-envelope"></i>florencecooley@gmail.com</a></p>
                     </div>
                 </div>
             </div>
