--- a/products.html
+++ b/products.html
@@ -32,14 +32,14 @@
         <div class="row no-gutters">
             <div class="col-sm-12">
                 <nav class="navbar navbar-light navbar-expand-sm">
-                    <a href="index.html" class="navbar-brand" id="home">Home</a>
+                    <a href="products.html" class="navbar-brand" id="home">Products</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse dropdown-menu-right" id="navbarCollapse">
                         <ul class="navbar-nav ml-auto">
                             <li class="navbar-item">
-                                <a href="products.html" class="nav-link">Products</a>
+                                <a href="index.html" class="nav-link">Home</a>
                             </li>
                             <li class="navbar-item">
                                 <a href="about.html" class="nav-link">About</a>
@@ -62,13 +62,15 @@
             <div class="col-sm-12">
                 <h1>Contact us!</h1>
                 <div class="row no-gutters" id="nested">
-                    <div class="col-sm-12 col-md-2" id="col-1">
-                        <p><a href="#" class="contact-link"><i class="fab fa-instagram"></i>Instagram placeholder</a></p>
+                    <div class="col-sm-12 col-md-2 footer-col">
+                        <p><a href="#" class="contact-link"><i class="fab fa-instagram"></i>Instagram placeholder</a>
+                        </p>
                         <p><a href="#" class="contact-link"><i class="fab fa-etsy"></i>Etsy placeholder</a></p>
                     </div>
-                    <div class="col-sm-12 col-md-2" id="col-2">
+                    <div class="col-sm-12 col-md-2 footer-col">
                         <p><a href="#" class="contact-link"><i class="fab fa-facebook"></i>Facebook placeholder</a></p>
-                        <p><a href="mailto: florencecooley@gmail.com" class="contact-link"><i class="fas fa-envelope"></i>florencecooley@gmail.com</a></p>
+                        <p><a href="mailto: florencecooley@gmail.com" class="contact-link"><i
+                                    class="fas fa-envelope"></i>florencecooley@gmail.com</a></p>
                     </div>
                 </div>
             </div>
