--- a/about.html
+++ b/about.html
@@ -30,27 +30,25 @@
       </div>
     </div>
 
-    <!-- nav: Cheryl -->
-    <div class="row no-gutters">
-      <div class="col-sm-12">
-        <nav class="navbar navbar-light navbar-expand-sm">
-          <a href="about.html" class="navbar-brand active" id="home">About</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse dropdown-menu-right" id="navbarCollapse">
-            <ul class="navbar-nav ml-auto">
-              <li class="navbar-item">
-                <a href="index.html" class="nav-link">Home</a>
-              </li>
-              <li class="navbar-item">
-                <a href="products.html" class="nav-link">Products</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+    <!--nav: Daniela-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item button-nav">
+            <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item button-nav">
+            <a class="nav-link" href="products.html">Products</a>
+          </li>
+          <li class="nav-item button-nav">
+            <a class="nav-link active" href="about.html">About <span class="sr-only">(current)</span></a>
+          </li>
+        </form>
       </div>
-    </div>
+    </nav>
 
     <!--main part Daniela-->
     <div class="row card-bio-section">
