--- a/index.html
+++ b/index.html
@@ -28,27 +28,25 @@
             </div>
         </div>
 
-        <!-- nav: Cheryl -->
-        <div class="row no-gutters">
-            <div class="col-sm-12">
-                <nav class="navbar navbar-light navbar-expand-sm">
-                    <a href="index.html" class="navbar-brand" id="home">Home</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse dropdown-menu-right" id="navbarCollapse">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="navbar-item">
-                                <a href="products.html" class="nav-link">Products</a>
-                            </li>
-                            <li class="navbar-item">
-                                <a href="about.html" class="nav-link">About</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
+    <!--nav: Daniela-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item button-nav">
+              <a class="nav-link active" href="index.html">Home <span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item button-nav">
+              <a class="nav-link" href="products.html">Products</a>
+            </li>
+            <li class="nav-item button-nav">
+              <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
+            </li>
+          </form>
         </div>
+      </nav>
 
         <!-- main content area: Alyssa -->
         <div class="row no-gutters" id="main-content">
