Fixed signup section

--- a/index.html
+++ b/index.html
@@ -28,71 +28,105 @@
             </div>
         </div>
 
-    <!--nav: Daniela-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item button-nav">
-              <a class="nav-link active" href="index.html">Home <span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item button-nav">
-              <a class="nav-link" href="products.html">Products</a>
-            </li>
-            <li class="nav-item button-nav">
-              <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
-            </li>
-          </form>
-        </div>
-      </nav>
+        <!--nav: Daniela-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item button-nav">
+                        <a class="nav-link active" href="index.html">Home <span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item button-nav">
+                        <a class="nav-link" href="products.html">Products</a>
+                    </li>
+                    <li class="nav-item button-nav">
+                        <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
+                    </li>
+                    </form>
+            </div>
+        </nav>
 
         <!-- main content area: Alyssa -->
         <div class="row no-gutters" id="main-content">
             <!-- product cards go here -->
-            <div class="col-sm-12 col-md-9" id="card-area">
+            <div class="col-sm-12 col-lg-9" id="card-area">
                 <div class="card-group">
                     <div class="card">
-                        <img class="card-img-top" alt="Card header image" src="styles/coffee.png">
+                        <img class="card-img-top card-image" alt="Dark Delia Denim Jacket"
+                            src="product_imgs/Dark_Delia_Jean/IMG_2615.jpg">
                         <div class="card-body">
-                            <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Card info goes here</p>
+                            <h5 class="card-title text-uppercase font-weight-bold">Dark Delia Denim Jacket</h5>
+                            <p class="card-text">Greyscale denim mid-length patchwork jean jacket with hood and green
+                                paisley lining. </p>
+                            <p class="card-text">
+                                <span><s>359.00 $</s></span><span class="text-danger pl-2">169.90 $</span>
+                            </p>
+                            <p>Email me to purchase! </p>
+                            <p>
+                                <a href="mailto: florencecooley@gmail.com" class="contact-link"><i
+                                        class="fas fa-envelope"></i> florencecooley@gmail.com</a>
+                            </p>
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" alt="Card header image" src="styles/hydrandrea.png">
+                        <img class="card-img-top card-image" alt="Dark Delia Skirt"
+                            src="product_imgs\Dark_Delia_Skirt\IMG_1647.JPG">
                         <div class="card-body">
-                            <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Card info goes here</p>
+                            <h5 class="card-title text-uppercase font-weight-bold">Dark Delia Denim Skirt</h5>
+                            <p class="card-text">A-line flowy greyscale denim patchwork skirt with red accents.</p>
+                            <p class="card-text">
+                                <span><s>159.00 $</s></span><span class="text-danger pl-2">65.90 $</span>
+                            </p>
+                            <p>Email me to purchase! </p>
+                            <p>
+                                <a href="mailto: florencecooley@gmail.com" class="contact-link"><i
+                                        class="fas fa-envelope"></i> florencecooley@gmail.com</a>
+                            </p>
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" alt="Card header image" src="styles/wood.png">
+                        <img class="card-img-top card-image" alt="Tera Pencil Skirt"
+                            src="product_imgs\Funky_Business\IMG_1655.JPG">
                         <div class="card-body">
-                            <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Card info goes here</p>
+                            <h5 class="card-title text-uppercase font-weight-bold">Tera Pencil Skirt</h5>
+                            <p class="card-text">Mid-length black, cream, and red pencil patchwork skirt.</p>
+                            <p class="card-text">
+                                <span><s>100.00 $</s></span><span class="text-danger pl-2">59.90 $</span>
+                            </p>
+                            <p>Email me to purchase! </p>
+                            <p>
+                                <a href="mailto: florencecooley@gmail.com" class="contact-link"><i
+                                        class="fas fa-envelope"></i> florencecooley@gmail.com</a>
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
 
             <!-- Sign up/search area: Alyssa  -->
-            <div class="col-sm-12 col-md-3" id="sidebar">
+            <div class="col-sm-12 col-lg-3" id="sidebar">
                 <h2 id="signup-header">Sign up for our mailing list here!</h2>
                 <form action="#" id="signup" method="post">
                     <div class="input-group">
-                        <label for="firstname" class="input-group-prepend">First name:</label>
-                        <input class="form-control input-sm rounded" type="text" id="firstname" name="firstname"
-                            required>
+                        <label for="firstname">First name: 
+                        <input type="text" class="form-control rounded" id="firstname" name="firstname"
+                            placeholder="First name" required>
+                        </label>
                     </div>
                     <div class="input-group">
-                        <label for="lastname" class="input-group-prepend">Last name:</label>
-                        <input class="form-control input-sm rounded" type="text" id="lastname" name="lastname" required>
+                        <label for="lastname">Last name: 
+                        <input class="form-control input-sm rounded" type="text" id="lastname" name="lastname"
+                            placeholder="Last name" required>
+                        </label>
                     </div>
                     <div class="input-group">
-                        <label for="email" class="input-group-prepend">Email address:</label>
-                        <input class="form-control input-sm rounded" type="email" id="email" name="email" required>
+                        <label for="email">Email: 
+                        <input class="form-control input-sm rounded" type="email" id="email" name="email"
+                            placeholder="Email address" required>
+                        </label>
                     </div>
                     <button type="submit" class="btn submit-button">Submit</button>
                 </form>
