set links to open in a new tab

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             </p>
                             <p>Email me to purchase! </p>
                             <p>
-                                <a href="mailto: florencecooley@gmail.com" class="contact-link"><i
+                                <a href="mailto: florencecooley@gmail.com" class="contact-link" target="_blank"><i
                                         class="fas fa-envelope"></i> florencecooley@gmail.com</a>
                             </p>
                         </div>
@@ -98,7 +98,7 @@
                             </p>
                             <p>Email me to purchase! </p>
                             <p>
-                                <a href="mailto: florencecooley@gmail.com" class="contact-link"><i
+                                <a href="mailto: florencecooley@gmail.com" class="contact-link" target="_blank"><i
                                         class="fas fa-envelope"></i> florencecooley@gmail.com</a>
                             </p>
                         </div>
@@ -139,13 +139,13 @@
                 <h1>Contact us!</h1>
                 <div class="row no-gutters" id="nested">
                     <div class="col-sm-12 col-md-2 footer-col">
-                        <p><a href="#" class="contact-link"><i class="fab fa-instagram"></i>Instagram placeholder</a>
+                        <p><a href="#" class="contact-link"><i class="fab fa-instagram" target="_blank"></i>Instagram placeholder</a>
                         </p>
-                        <p><a href="#" class="contact-link"><i class="fab fa-etsy"></i>Etsy placeholder</a></p>
+                        <p><a href="#" class="contact-link"><i class="fab fa-etsy" target="_blank"></i>Etsy placeholder</a></p>
                     </div>
                     <div class="col-sm-12 col-md-2 footer-col">
-                        <p><a href="#" class="contact-link"><i class="fab fa-facebook"></i>Facebook placeholder</a></p>
-                        <p><a href="mailto: florencecooley@gmail.com" class="contact-link"><i
+                        <p><a href="#" class="contact-link"><i class="fab fa-facebook" target="_blank"></i>Facebook placeholder</a></p>
+                        <p><a href="mailto: florencecooley@gmail.com" class="contact-link" target="_blank"><i
                                     class="fas fa-envelope"></i>florencecooley@gmail.com</a></p>
                     </div>
                 </div>
