--- a/about.html
+++ b/about.html
@@ -62,13 +62,10 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="about_imgs/img1.jpg" alt="First slide">
+              <img class="d-block w-100" src="about_imgs/florence.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="about_imgs/img2.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="about_imgs/img3.jpg" alt="Third slide">
+              <img class="d-block w-100" src="about_imgs/flo_jose.jpg" alt="Second slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -83,19 +80,19 @@
         <div class="bio-card-info">
           <div class="bio-card-line">
             <h5 class="bio-card-label">Name: </h5>
-            <p>HER NAME!</p>
+            <p>Florence Cooley</p>
           </div>
           <div class="bio-card-line">
             <h5 class="bio-card-label">Location: </h5>
-            <p>HER LOCATION!</p>
+            <p>Yarmouth, ME</p>
           </div>
           <div class="bio-card-line">
             <h5 class="bio-card-label">Interests: </h5>
-            <p>HER INTERESTS!</p>
+            <p>Hoola-Hooping, Cats, Theater, Light Design, Saving The Planet!</p>
           </div>
           <div class="bio-card-line">
             <h5 class="bio-card-label">Motto: </h5>
-            <p>HER MOTTO!</p>
+            <p>Can't Stop, Won't Stop!</p>
           </div>
         </div>
 
@@ -104,11 +101,12 @@
         <div>
           <h1 id="bio-title">Biography</h1>
           <p id="bio-paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
+            Florence grew up in Yarmouth, Maine where she was very active in her high school theater and in her local Habitat For Humanity charity. 
+            She went on to The University of Southern Maine and got her Bachelor's Degree in Lighting Design. From there she combined her passion to save the planet and 
+            her love for design by recycling old clothes into a patchwork masterpiece on the side while working for the Union working as a costume designer, stage hand or lighting design technician.
+            It is her dream to be an etrepreneur and to create unique custom works of art.
+            
+         
           </p>
         </div>
         <div id="accordion">
@@ -124,12 +122,9 @@
 
             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
-                moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-                Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-                shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
-                proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim
-                aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                I have been creating costumes since I was very young, and I loved how I can express myself through creativity and display my art by my clothes. I am also veyr passionate
+                about charity and saving the earth by not wasting. That is where I started taking old clothes and upcycling them into something unique and something 
+                someone would be proud to wear! As of right now, I am my only customer along with some of my close friends and family, but I hope to one day sell globally. 
               </div>
             </div>
           </div>
@@ -144,12 +139,8 @@
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
-                moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-                Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-                shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
-                proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim
-                aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                I will get my materials where ever I can! If it is free, all the better. A lot of people donate their clothes to me, other times
+                I will take the scraps of fabric that the gigs that I work would normally throw out, and sometimes I would by clothes buy the pound at GoodWill.
               </div>
             </div>
           </div>
@@ -164,12 +155,7 @@
             </div>
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
-                moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-                Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-                shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
-                proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim
-                aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                For the most part, I generally only patchwork design. Which, is a very tedious but rewarding process. That way I can make almost anything out of the materials I have available to me. 
               </div>
             </div>
           </div>
@@ -186,12 +172,12 @@
       <h1>Contact us!</h1>
       <div class="row no-gutters" id="nested">
         <div class="col-sm-12 col-md-2 footer-col">
-          <p><a href="#" class="contact-link"><i class="fab fa-instagram" target="_blank"></i>Instagram placeholder</a>
+          <p><a href="https://instagram.com/faerieflo?igshid=1iwzuo2gkssmx" class="contact-link"><i class="fab fa-instagram" target="_blank"></i>Instagram</a>
           </p>
-          <p><a href="#" class="contact-link"><i class="fab fa-etsy" target="_blank"></i>Etsy placeholder</a></p>
+          <p><a href="https://www.etsy.com/" class="contact-link"><i class="fab fa-etsy" target="_blank"></i>Etsy</a></p>
         </div>
         <div class="col-sm-12 col-md-2 footer-col">
-          <p><a href="#" class="contact-link"><i class="fab fa-facebook" target="_blank"></i>Facebook placeholder</a>
+          <p><a href="https://www.facebook.com/FloFaerie" class="contact-link"><i class="fab fa-facebook" target="_blank"></i>Facebook</a>
           </p>
           <p><a href="mailto: florencecooley@gmail.com" class="contact-link" target="_blank"><i
                 class="fas fa-envelope"></i>florencecooley@gmail.com</a></p>
