--- a/about.html
+++ b/about.html
@@ -171,16 +171,15 @@
     <div class="col-sm-12">
       <h1>Contact us!</h1>
       <div class="row no-gutters" id="nested">
-        <div class="col-sm-12 col-md-2 footer-col">
+        <div class="col-sm-12 col-md-4 footer-col">
           <p><a href="https://instagram.com/faerieflo?igshid=1iwzuo2gkssmx" class="contact-link"><i class="fab fa-instagram" target="_blank"></i>Instagram</a>
           </p>
           <p><a href="https://www.etsy.com/" class="contact-link"><i class="fab fa-etsy" target="_blank"></i>Etsy</a></p>
         </div>
-        <div class="col-sm-12 col-md-2 footer-col">
+        <div class="col-sm-12 col-md-4 footer-col">
           <p><a href="https://www.facebook.com/FloFaerie" class="contact-link"><i class="fab fa-facebook" target="_blank"></i>Facebook</a>
           </p>
-          <p><a href="mailto: florencecooley@gmail.com" class="contact-link" target="_blank"><i
-                class="fas fa-envelope"></i>florencecooley@gmail.com</a></p>
+          <p><a href="mailto: florencecooley@gmail.com" class="contact-link" target="_blank"><i class="fas fa-envelope"></i>florencecooley@gmail.com</a></p>
         </div>
       </div>
     </div>
