--- a/products.html
+++ b/products.html
@@ -16,7 +16,6 @@
     <!-- Link to your custom stylesheet. -->
     <link rel="stylesheet" type="text/css" href="styles/custom.css">
     <link rel="stylesheet" type="text/css" href="styles/product_style.css">
-    <!-- <link rel="stylesheet" type="text/css" href="styles/about_style.css"> -->
 </head>
 
 <body>
@@ -51,40 +50,8 @@
             </div>
         </nav>
 
-        <!-- product gallery -->
+        <!-- product gallery Cheryl -->
         <class class="row no-gutters" id="gallery">
-
-            <!-- <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-light">
-
-                <a class="navbar-brand" href="/"><span class="font-weight-bold">TEST</span></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                 <span class="navbar-toggler-icon"></span>
-                </button>
-               
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                 <ul class="navbar-nav mr-auto">
-                  <li class="nav-item dropdown">
-                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Woman
-                   </a>
-                   <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                    <a class="dropdown-item" href="?menu=woman-special-prices">woman-special-prices</a>
-                   </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Kids
-                   </a>
-                   <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
-                    <a class="dropdown-item" href="?menu=kids-babyboy-special-prices">kids-babyboy-special-prices</a>
-                    <a class="dropdown-item" href="?menu=kids-babygirl-special-prices">kids-babygirl-special-prices</a>
-                    <a class="dropdown-item" href="?menu=kids-girl-special-prices">kids-girl-special-prices</a>
-                   </div>
-                  </li>
-                 </ul>
-                </div>
-               
-               </nav> -->
 
             <div class="container-fluid">
 
@@ -132,8 +99,8 @@
                                             class="fas fa-envelope"></i> florencecooley@gmail.com</a>
                                 </p>
                             </div>
-                        </div><!-- /card -->
-                    </div><!-- /col -->
+                        </div>
+                    </div>
 
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
                         <div class="card h-100">
@@ -184,8 +151,8 @@
                                             class="fas fa-envelope"></i> florencecooley@gmail.com</a>
                                 </p>
                             </div>
-                        </div><!-- /card -->
-                    </div><!-- /col -->
+                        </div>
+                    </div>
 
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
                         <div class="card h-100">
@@ -228,8 +195,8 @@
                                             class="fas fa-envelope"></i> florencecooley@gmail.com</a>
                                 </p>
                             </div>
-                        </div><!-- /card -->
-                    </div><!-- /col -->
+                        </div>
+                    </div>
 
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
 
@@ -297,8 +264,8 @@
                                             class="fas fa-envelope"></i> florencecooley@gmail.com</a>
                                 </p>
                             </div>
-                        </div><!-- /card -->
-                    </div><!-- /col -->
+                        </div>
+                    </div>
 
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
 
@@ -346,8 +313,8 @@
                                             class="fas fa-envelope"></i> florencecooley@gmail.com</a>
                                 </p>
                             </div>
-                        </div><!-- /card -->
-                    </div><!-- /col -->
+                        </div>
+                    </div>
 
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
 
@@ -399,8 +366,8 @@
                                             class="fas fa-envelope"></i> florencecooley@gmail.com</a>
                                 </p>
                             </div>
-                        </div><!-- /card -->
-                    </div><!-- /col -->
+                        </div>
+                    </div>
 
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
                         <div class="card h-100">
@@ -443,8 +410,8 @@
                                             class="fas fa-envelope"></i> florencecooley@gmail.com</a>
                                 </p>
                             </div>
-                        </div><!-- /card -->
-                    </div><!-- /col -->
+                        </div>
+                    </div>
 
                     <div class="col-sm-3 col-lg-2 col-xl-2 px-0">
 
@@ -500,8 +467,8 @@
                                             class="fas fa-envelope"></i> florencecooley@gmail.com</a>
                                 </p>
                             </div>
-                        </div><!-- /card -->
-                    </div><!-- /col -->
+                        </div>
+                    </div>
 
 
                 </div>
