--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="card-group">
                     <div class="card">
                         <img class="card-img-top card-image" alt="Dark Delia Denim Jacket"
-                            src="product_imgs/Dark_Delia_Jean/IMG_2615.jpg">
+                            src="product_imgs/Dark_Delia_Jean/IMG_2615.JPG">
                         <div class="card-body">
                             <h5 class="card-title text-uppercase font-weight-bold">Dark Delia Denim Jacket</h5>
                             <p class="card-text">Greyscale denim mid-length patchwork jean jacket with hood and green
