--- a/index.html
+++ b/index.html
@@ -111,21 +111,21 @@
                 <h2 id="signup-header">Sign up for our mailing list here!</h2>
                 <form action="#" id="signup" method="post">
                     <div class="input-group">
-                        <label for="firstname">First name: 
-                        <input type="text" class="form-control rounded" id="firstname" name="firstname"
-                            placeholder="First name" required>
+                        <label for="firstname">First name:
+                            <input type="text" class="form-control rounded" id="firstname" name="firstname"
+                                placeholder="First name" required>
                         </label>
                     </div>
                     <div class="input-group">
-                        <label for="lastname">Last name: 
-                        <input class="form-control input-sm rounded" type="text" id="lastname" name="lastname"
-                            placeholder="Last name" required>
+                        <label for="lastname">Last name:
+                            <input class="form-control input-sm rounded" type="text" id="lastname" name="lastname"
+                                placeholder="Last name" required>
                         </label>
                     </div>
                     <div class="input-group">
-                        <label for="email">Email: 
-                        <input class="form-control input-sm rounded" type="email" id="email" name="email"
-                            placeholder="Email address" required>
+                        <label for="email">Email:
+                            <input class="form-control input-sm rounded" type="email" id="email" name="email"
+                                placeholder="Email address" required>
                         </label>
                     </div>
                     <button type="submit" class="btn submit-button">Submit</button>
@@ -136,21 +136,26 @@
         <!-- footer: Alyssa -->
         <div class="row no-gutters" id="footer">
             <div class="col-sm-12">
-              <h1>Contact us!</h1>
-              <div class="row no-gutters" id="nested">
-                <div class="col-sm-12 col-md-4 footer-col">
-                  <p><a href="https://instagram.com/faerieflo?igshid=1iwzuo2gkssmx" class="contact-link"><i class="fab fa-instagram" target="_blank"></i>Instagram</a>
-                  </p>
-                  <p><a href="https://www.etsy.com/" class="contact-link"><i class="fab fa-etsy" target="_blank"></i>Etsy</a></p>
+                <h1>Contact us!</h1>
+                <div class="row no-gutters" id="nested">
+                    <div class="col-sm-12 col-md-4 footer-col">
+                        <p><a href="https://instagram.com/faerieflo?igshid=1iwzuo2gkssmx" class="contact-link"
+                                target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
+                        </p>
+                        <p><a href="https://www.etsy.com/" class="contact-link" target="_blank"><i
+                                    class="fab fa-etsy"></i>Etsy</a></p>
+                    </div>
+                    <div class="col-sm-12 col-md-4 footer-col">
+                        <p><a href="https://www.facebook.com/FloFaerie" class="contact-link" target="_blank"><i
+                                    class="fab fa-facebook"></i>Facebook</a>
+                        </p>
+                        <p><a href="mailto: florencecooley@gmail.com" class="contact-link" target="_blank"><i
+                                    class="fas fa-envelope"></i>florencecooley@gmail.com</a></p>
+                    </div>
                 </div>
-                <div class="col-sm-12 col-md-4 footer-col">
-                  <p><a href="https://www.facebook.com/FloFaerie" class="contact-link"><i class="fab fa-facebook" target="_blank"></i>Facebook</a>
-                  </p>
-                  <p><a href="mailto: florencecooley@gmail.com" class="contact-link" target="_blank"><i class="fas fa-envelope"></i>florencecooley@gmail.com</a></p>
-                </div>
-              </div>
             </div>
-          </div>
+        </div>
+    </div>
 
 
     <!-- jQuery -->
