--- a/products.html
+++ b/products.html
@@ -459,7 +459,7 @@
                                 <h5 class="card-title text-uppercase font-weight-bold">Delia Denim Jacket</h5>
                                 <p class="card-text">Oversized multicolored denim patchwork jacket.</p>
                                 <p class="card-text">
-                                    <span><s>359.00 $</s></span><span class="text-danger pl-2">169.90 PLN</span>
+                                    <span><s>359.00 $</s></span><span class="text-danger pl-2">169.90 $</span>
                                 </p>
                                 <p>Email me to purchase! </p>
                                 <p>
