--- a/products.html
+++ b/products.html
@@ -256,7 +256,7 @@
                                 <h5 class="card-title text-uppercase font-weight-bold">Flo Long Coat</h5>
                                 <p class="card-text">Long multicolored long denim patchwork coat with floral lining.</p>
                                 <p class="card-text">
-                                    <span><s>509.00 PLN</s></span><span class="text-danger pl-2">309.90 PLN</span>
+                                    <span><s>509.00 $</s></span><span class="text-danger pl-2">309.90 $</span>
                                 </p>
                                 <p>Email me to purchase! </p>
                                 <p>
